--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4 
	- Added Playlist and Genre Counts to the XMLAPI Handshake
	- Added ability to Add Search Results to playlist, or download
		if batch download is enabled
	- Fixed Remove one vote, removes all votes on democratic play
	- Fixed sorting issue on Browse Users

--------------------------------------------------------------------------
  v.3.4-Beta3 04/20/2008 
	- Fixed Rating display and Rating Advanced Search
	- Added ability to specify new Genre when adding a Radio Station
	- Fixed Recently Played to do Distinct over last X rather then
		distinct over all time
	- Added update the attempts to correct the charset on the db
		columns
	- Added prompt for input charset to fix_filenames.inc
	- Updated Links in Readme
	- Fixed Show Art filter on browse by albums
	- Added Ratings links to Browse Albums and Browse Artist
	- Fixed seeking on random track, giving you a new track every	
		seek 
	- Added additional error reporting if localplay access / config
		fails
	- Give Admins Full Localplay Regardless
	- Fixed incorrect reference to ellipsis thresholds 
	- Fixed page point not being remembered by the back button
	- Fixed naming restrictions on database name during install
	- Fixed issue where verify updated all songs in the catalog even
		if there was no change
	- Fixed recently played, only shows distinct songs
	- Fixed enabling of localplay modules, now correctly enables
		localplay for the activating user
	- Added single genre and playlist XML methods
	- Changed error message on XML api, now based of HTTP error codes
	- Split out ACL and Session Expire errors on XML API 
	- Made Alpha Match box on browse "find as you type" (Thx Spocky)