@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.4 
+	- Fixed album art thumbs never saving due to incorrect table reference
+	- Fixed download having no filename if no catalog pattern
+	- Fixed issue where 0 sized images could be inserted into the database
+		artifically inflating its size
 	- Added Playlist and Genre Counts to the XMLAPI Handshake
 	- Added ability to Add Search Results to playlist, or download
 		if batch download is enabled
